# tg_trading_bot

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
adapters/: base.py  binance_spot.py  mt5_bridge.py  mt5_terminal.py  paper.py
backtest/: metrics.py  report.py  runner.py
bot/: app.py  keyboards.py  messages.py  middleware.py  routers.py
data/: schema.sql  schema_pg.sql  store.py
engine/: core.py  idempotency.py  models.py  state.py
risk/: manager.py
services/: config_service.py  crypto.py  notifier.py  orchestrator.py  scheduler.py
strategies/: base.py  ma_atr.py
tests/: test_admin_guard.py  test_idempotency.py  test_risk.py  test_strategy.py
tg_trading_bot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
